# fathom-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  LICENSE  README.md  config.example.yaml  config.http.example.yaml  docker-compose.test.yml  docker-compose.yaml  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  integration-formats.yaml  publish-pypi.yml  publish-release.yaml  (+4 more)
docker/: healthcheck.py
docs/: ci-cd.md  cloud-sync-guide.md  configuration.md  filter-architecture.md  integration.md  openai-agent-integration.md  security.md  supported-formats.md  tools.md  ugrep-doc.md
inspector/: __init__.py  app.py  mcp_client.py
scripts/: quick_check.py  search.bat  search.sh  search_cli.py  test_dependencies.py  test_docker.py  test_local_setup.py  test_mcp_server.py  validate_ci.py  verify-filters.py  verify_filters.py
specs/: README.md  api-reference.md  configuration.md  error-codes.md  improvements-and-suggestions.md  phase-1-foundation.md  phase-2-enhanced.md  phase-3-sync.md  phase-4-distribution.md
tests/: conftest.py  test_benchmarks.py  test_browse.py  test_cache.py  test_cli.py  test_config.py  test_filter_builder.py  test_filter_integration.py  test_formats.py  test_index.py  test_integration_formats.py  test_integration_http.py  test_integration_mcp.py  test_middleware.py  test_pdf_processor.py  test_prompts.py  test_read.py  test_resources.py  test_search.py  test_security_errors.py  test_server.py  test_test_client.py  test_transports.py  test_watcher.py
(+47 files in other folders)
